# forms.py

./: db.sqlite3  manage.py  pyproject.toml
news/: admin.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/: index.html
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
recipe/templates/: author.html  authoraddform.html  generic_form.html  index.html  recipe.html
recipebox/: asgi.py  settings.py  urls.py  wsgi.py
recipebox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
